chore: enable spring boot on SS services

--- a/Docker/xrd-dev-stack/compose.yaml
+++ b/Docker/xrd-dev-stack/compose.yaml
@@ -1,6 +1,8 @@
 services:
   cs:
     image: ${CS_IMG}
+    environment:
+      - XROAD_ENV=central-server
     deploy:
       resources:
         reservations:
@@ -16,6 +18,7 @@ services:
     environment:
       - PROXY_JMX_PORT=4299
       - SIGNER_JMX_PORT=4298
+      - XROAD_ENV=security-server
       - XRD_CONFIG_SERVER_URI=http://localhost:5580
     deploy:
       resources:
@@ -33,6 +36,7 @@ services:
       - XROAD_TOKEN_PIN=Secret1234
       - PROXY_JMX_PORT=4399
       - SIGNER_JMX_PORT=4398
+      - XROAD_ENV=security-server
       - XRD_CONFIG_SERVER_URI=http://localhost:5580
     deploy:
       resources:
