chore: add a workaround for spring boot related issues with Forked pools.

--- a/Docker/securityserver/files/ss-xroad.conf
+++ b/Docker/securityserver/files/ss-xroad.conf
@@ -60,6 +60,8 @@ stdout_logfile_maxbytes=0
 command=/usr/share/xroad/jlib/configuration-service.jar
 user=xroad
 autorestart=true
+stopasgroup=true
+redirect_stderr=true
 priority=80
 
 [program:xroad-edc-ih]
