chore: As a Security Auditor I want to have an environment to test against so that I can audit the security of the product
add acme support to Test CA

refs: XRDDEV-2707

--- a/ansible/roles/xroad-ca/defaults/main.yml
+++ b/ansible/roles/xroad-ca/defaults/main.yml
@@ -4,3 +4,4 @@ xroad_ca_ocsp_o: "{{ xroad_ca_o }}"
 xroad_ca_ocsp_cn: "Test OCSP"
 xroad_ca_tsa_o: "{{ xroad_ca_o }}"
 xroad_ca_tsa_cn: "Test TSA"
+a2c_ver: "0.35"
