--- a/ansible/roles/xroad-ca/tasks/main.yml
+++ b/ansible/roles/xroad-ca/tasks/main.yml
@@ -15,6 +15,14 @@
       - "acl"
       - "nginx-light"
       - "openssl"
+      - "python3-pip"
+      - "uwsgi"
+      - "uwsgi-plugin-python3"
+
+- name: download acme2certifier
+  get_url:
+    url: "https://github.com/grindsa/acme2certifier/releases/download/{{ a2c_ver }}/acme2certifier_{{ a2c_ver }}-1_all.deb"
+    dest: /tmp/
 
 - name: group ca
   group:
@@ -127,6 +135,37 @@
   become: true
   become_user: ca
   when: stat_result.stat.exists == False
+
+- name: init_acme.sh template
+  template:
+    src: "init_acme.sh"
+    dest: "/home/ca/CA/init_acme.sh"
+    owner: "ca"
+    group: "ca"
+    mode: 0700
+
+- name: check if .init_acme exists
+  stat:
+    path: /home/ca/CA/.init_acme
+  register: stat_result
+
+- name: run init_acme.sh
+  shell: ./init_acme.sh > init_acme.log 2>&1
+  args:
+    chdir: "/home/ca/CA"
+  become: true
+  become_user: root
+  when: stat_result.stat.exists == False
+
+
+- name: copy acme2certifier conf
+  copy:
+    src: "files/{{ item }}"
+    dest: /var/www/acme2certifier/acme_srv/acme_srv.cfg
+    group: "www-data"
+    owner: "www-data"
+  with_items:
+    - "acme2certifier/acme_srv.cfg"
 
 - name: remove obsolete files
   file:
