--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -40,7 +40,8 @@ include "configuration-client:application"
 include "configuration-client:core"
 include "asicverifier"
 include "asic-util"
-include "monitor"
+include "monitor:application"
+include "monitor:core"
 include "monitor-common"
 include "op-monitor-daemon:application"
 include "op-monitor-daemon:core"
