--- a/Docker/test-services/example-adapter/Dockerfile
+++ b/Docker/test-services/example-adapter/Dockerfile
@@ -8,23 +8,33 @@
 
 
 ################################################################################
-FROM maven:3.8.4-openjdk-11-slim AS build
+FROM eclipse-temurin:11 AS build-xrd4j-lib
 RUN apt-get update && apt-get install -y git
 WORKDIR /app
-RUN git clone https://github.com/nordic-institute/xrd4j.git
-WORKDIR /app/xrd4j/src
-RUN mvn install -DskipTests -Ddependency-check.skip=true
-WORKDIR /app/xrd4j/example-adapter
-RUN mvn clean package -DskipTests
+ENV GRADLE_OPTS="-Dorg.gradle.daemon=false -Dmaven.repo.local=/app/.m2_repository -Dgradle.user.home=/app/.gradle_home"
+RUN <<EOF
+  set -ex
+  git clone https://github.com/nordic-institute/xrd4j.git
+  cd xrd4j/src
+  ./gradlew assemble publishToMavenLocal
+EOF
 
-RUN cp /app/xrd4j/example-adapter/target/example-adapter-*.war /app/example-adapter.war
+#################################################################################
+FROM eclipse-temurin:17 AS build-example-adapter
+ENV GRADLE_OPTS="-Dorg.gradle.daemon=false -Dmaven.repo.local=/app/.m2_repository -Dgradle.user.home=/app/.gradle_home"
+RUN --mount=type=cache,from=build-xrd4j-lib,source=/app,target=/app <<EOF
+    set -ex
+    cd /app/xrd4j/example-adapter
+    ./gradlew assemble
+    cp /app/xrd4j/example-adapter/build/libs/example-adapter-*-boot.war /example-adapter.war
+EOF
 
 ################################################################################
 # copy/paste from xrd4j repo
-FROM eclipse-temurin:11-jre AS final
+FROM eclipse-temurin:17-jre AS final
 
 # Add Rest Gateway jar to container
-COPY --from=build /app/example-adapter.war example-adapter.war
+COPY --from=build-example-adapter /example-adapter.war example-adapter.war
 
 # Entry in json format
 ENTRYPOINT ["java", "-jar", "/example-adapter.war"]
