--- a/src/monitor/application/build.gradle
+++ b/src/monitor/application/build.gradle
@@ -1,28 +1,31 @@
 plugins {
-    alias(libs.plugins.shadow)
+    alias(libs.plugins.springBoot)
 }
 
 dependencies {
-    implementation(platform(libs.springBoot.bom))
+    implementation(platform(libs.springCloud.bom))
 
     implementation project(':common:common-core')
     implementation project(':monitor:core')
     implementation project(':monitor-common')
-    implementation project(':signer-protocol')
 
     implementation libs.bundles.metrics
-    implementation('org.springframework:spring-context')
+
+    implementation("org.springframework.boot:spring-boot-starter")
+    implementation("org.springframework.cloud:spring-cloud-config-client")
 }
 
-shadowJar {
-    exclude('**/module-info.class')
-    archiveBaseName = "monitor"
-    archiveClassifier = ''
+bootJar {
+    enabled = true
+    archiveBaseName = 'monitor'
+
     manifest {
-        attributes 'Main-Class': 'ee.ria.xroad.monitor.MonitorMain'
+        attributes(
+            'Implementation-Title': 'X-Road Environmental Monitoring',
+            'Implementation-Version': "$xroadVersion-$xroadBuildType",
+            'Main-Class': 'org.springframework.boot.loader.launch.PropertiesLauncher'
+        )
     }
-    mergeServiceFiles()
 }
 
 jar.enabled = false
-assemble.dependsOn shadowJar
