chore: using grpc properties class
Refs: XRDDEV-2715

--- a/src/configuration-client/application/build.gradle
+++ b/src/configuration-client/application/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation(platform(libs.springCloud.bom))
 
     implementation project(':common:common-core')
+    implementation project(':common:common-rpc')
     implementation project(':configuration-client:core')
 
     implementation("org.springframework.boot:spring-boot-starter")
