--- a/src/central-server/admin-service/application/src/main/resources/application.yml
+++ b/src/central-server/admin-service/application/src/main/resources/application.yml
@@ -123,3 +123,5 @@ xroad:
     strict-identifier-checks: true
     request-size-limit-regular: 50KB
     request-size-limit-binary-upload: 10MB
+  signer:
+    grpc-tls-enabled: false
