--- a/src/op-monitor-daemon/application/src/main/resources/application.yaml
+++ b/src/op-monitor-daemon/application/src/main/resources/application.yaml
@@ -24,3 +24,8 @@ xroad:
 
   common:
     global-conf-remoting-enabled: true
+
+  configuration-client:
+    grpc-host: localhost
+    grpc-port: 5665
+    grpc-tls-enabled: false
