--- a/src/packages/src/xroad/ubuntu/generic/control
+++ b/src/packages/src/xroad/ubuntu/generic/control
@@ -85,7 +85,7 @@ Description: X-Road configuration proxy
  X-Road configuration proxy
 
 Package: xroad-addon-hwtokens
-Architecture: amd64
+Architecture: amd64 arm64
 # These following 2 package relationship changes were required to fix an issue caused by a file dependency diversion from xroad-signer to xroad-addon-hwtokens in 7.1.0
 Replaces: xroad-signer (<< 7.1.0)
 Breaks: xroad-signer (<< 7.1.0)
