--- a/src/signer/core/build.gradle
+++ b/src/signer/core/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation project(':signer-protocol')
 
     // Necessary since there are jars with no adequate Maven dependencies
-    implementation fileTree(dir: '../../libs', include: '*.jar')
+    api fileTree(dir: '../../libs/pkcs11wrapper', include: '*.jar')
 
     testImplementation project(':common:common-test')
     testImplementation project(path: ':common:common-verifier', configuration: 'testArtifacts')
