chore: using grpc properties class
Refs: XRDDEV-2715

--- a/src/monitor/application/src/main/resources/application.yaml
+++ b/src/monitor/application/src/main/resources/application.yaml
@@ -28,3 +28,7 @@ xroad:
     grpc-host: localhost
     grpc-port: 5665
     grpc-tls-enabled: false
+  proxy:
+    grpc-host: localhost
+    grpc-port: 5567
+    grpc-tls-enabled: false
