--- a/src/monitor/application/src/main/resources/application.yaml
+++ b/src/monitor/application/src/main/resources/application.yaml
@@ -13,11 +13,15 @@ spring:
 
 xroad:
   env-monitor:
-    port: 2552
+    certificate-info-sensor-interval: 1d
+    disk-space-sensor-interval: 60s
+    exec-listing-sensor-interval: 60s
+    system-metrics-sensor-interval: 5s
     limit-remote-data-set: false
-    grpc-listen-address: 0.0.0.0
-    grpc-port: 2552
-    grpc-tls-enabled: false
+    grpc:
+      grpc-listen-address: 0.0.0.0
+      grpc-port: 2552
+      grpc-tls-enabled: false
   common:
     global-conf-remoting-enabled: true
   signer:
