--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -21,6 +21,7 @@ include "common:common-management-request"
 include "common:common-messagelog"
 include "common:common-op-monitoring"
 include "common:common-verifier"
+include "common:common-properties"
 include "common:common-rpc"
 include "common:common-int-test"
 include 'common:common-globalconf'
