XRDDEV-2723: update pkcs#11 wrapper to latest version. (#2366)
* chore: update pkcs#11 wrapper to latest version. Additional arm64 support.

Refs: XRDDEV-2723

* chore: add additional architectures for test selector

Refs: XRDDEV-2723

* chore: moving softhsm2 to a better dockerfile place

Refs: XRDDEV-2723

* chore: disabling automating build for passwordstore native lib, adding precompiled amd64 and arm64 binaries

Refs: XRDDEV-2723

* chore: fix an issue with passwordstore tests
Refs: XRDDEV-2723

* chore: fix for rhel pkcs11 path
Refs: XRDDEV-2723

* chore: move to a different dpkg arch variable

Refs: XRDDEV-2723

* chore: disable focal, enable noble in github build

Refs: XRDDEV-2723

* chore: drop softhsm2 from default image (breaks tests)

Refs: XRDDEV-2723

* chore: drop hwtoken module

Refs: XRDDEV-2723

* chore: drop hwtoken module

Refs: XRDDEV-2723

--- a/src/signer-protocol/build.gradle
+++ b/src/signer-protocol/build.gradle
@@ -33,7 +33,12 @@ protobuf {
 compileJava.dependsOn generateProto
 
 test {
-    jvmArgs '-Djava.library.path=../lib'
+    if (Os.isArch("x86_64") || Os.isArch("amd64")) {
+        jvmArgs '-Djava.library.path=../libs/passwordstore/amd64'
+    }
+    if (Os.isArch("aarch64") || Os.isArch("arm64")) {
+        jvmArgs '-Djava.library.path=../libs/passwordstore/arm64'
+    }
 }
 
 if (Os.isName("linux")) {
@@ -54,6 +59,5 @@ if (Os.isName("linux")) {
         commandLine 'make', 'clean'
     }
 
-    classes.dependsOn make
     clean.dependsOn makeClean
 }
