--- a/src/configuration-client/application/src/main/resources/application.yaml
+++ b/src/configuration-client/application/src/main/resources/application.yaml
@@ -13,7 +13,10 @@ spring:
 
 xroad:
   configuration-client:
-    grpc-listen-address: 0.0.0.0
-    grpc-port: 5665
-    grpc-tls-enabled: false
     update-interval: 60
+    proxy-configuration-backup-cron: 0 15 3 * * ?
+    grpc:
+      grpc-listen-address: 0.0.0.0
+      grpc-port: 5665
+      grpc-tls-enabled: false
+      update-interval: 60
