chore: adding common global conf properties
Refs: XRDDEV-2715

--- a/src/addons/messagelog/messagelog-archiver/build.gradle
+++ b/src/addons/messagelog/messagelog-archiver/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation(project(':common:common-scheduler'))
     implementation(project(':common:common-db'))
     implementation(project(':common:common-messagelog'))
+    implementation(project(':common:common-properties'))
     implementation(project(':common:common-verifier'))
     implementation(project(':addons:messagelog:messagelog-db'))
     implementation(project(':asic-util'))
