--- a/src/central-server/registration-service/build.gradle
+++ b/src/central-server/registration-service/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation(project(':common:common-management-request')) {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
+    implementation(project(':common:common-properties'))
     implementation(project(':common:common-verifier')) {
         transitive = false
     }
