--- a/src/common/common-properties/build.gradle
+++ b/src/common/common-properties/build.gradle
@@ -9,3 +9,8 @@ dependencies {
 
     implementation("org.springframework.boot:spring-boot-starter")
 }
+
+//todo: enable
+archUnit {
+    skip = true
+}
