--- a/src/proxy/application/build.gradle
+++ b/src/proxy/application/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 
     implementation(project(':proxy:core'))
     implementation(project(':common:common-core'))
+    implementation(project(':common:common-properties'))
     implementation(project(':common:common-rpc'))
 
     implementation("org.springframework.boot:spring-boot-starter")
