chore: proxy tests fix
Refs: XRDDEV-2715

--- a/src/proxy/core/build.gradle
+++ b/src/proxy/core/build.gradle
@@ -87,7 +87,7 @@ check.dependsOn integrationTest
 
 tasks.register('intTest', Test) {
     useJUnitPlatform()
-    dependsOn(':signer:application:shadowJar')
+    dependsOn(':signer:application:bootJar')
 
     setDescription("Runs integration tests.")
     group = 'verification'
