--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -118,6 +118,8 @@ include "addons:messagelog:messagelog-addon"
 include "addons:messagelog:messagelog-addon:asic"
 include "addons:messagelog:messagelog-addon:core"
 include "addons:messagelog:messagelog-archiver"
+include "addons:messagelog:messagelog-archiver:core"
+include "addons:messagelog:messagelog-archiver:application"
 include 'addons:messagelog:messagelog-archive-verifier'
 include "addons:messagelog:messagelog-db"
 include "addons:metaservice"
