--- a/src/addons/messagelog/messagelog-addon/core/build.gradle
+++ b/src/addons/messagelog/messagelog-addon/core/build.gradle
@@ -11,19 +11,10 @@ dependencies {
 
     implementation libs.dss.xml.utils
 
-//    testImplementation project(':addons:messagelog:messagelog-addon:asic')
-    testImplementation project(':addons:messagelog:messagelog-archiver')
-//    testImplementation project(':addons:messagelog:messagelog-db')
+    testImplementation project(':addons:messagelog:messagelog-addon:asic')
+    testImplementation project(':addons:messagelog:messagelog-archiver:core')
     testImplementation project(':common:common-jetty')
 
-//    testImplementation project(':common:common-globalconf')
-//    testImplementation project(':common:common-scheduler')
-//    testImplementation project(':common:common-message')
-
-//    testImplementation project(':common:common-messagelog')
-//    testImplementation project(':common:common-verifier')
-//    testImplementation project(':serverconf')
-//    testImplementation project(':asic-util')
     testImplementation project(':proxy:core')
 
     testImplementation project(':common:common-keyconf')
