chore: fix after merge
Refs: XRDDEV-2715

--- a/src/addons/messagelog/messagelog-archiver/application/build.gradle
+++ b/src/addons/messagelog/messagelog-archiver/application/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     implementation(project(':addons:messagelog:messagelog-archiver:core'))
 
     implementation(project(':common:common-core'))
+    implementation project(':common:common-properties')
+    implementation project(':common:common-rpc')
 
     implementation("org.springframework.boot:spring-boot-starter")
     implementation("org.springframework.cloud:spring-cloud-config-client")
