--- a/src/configuration-client/application/build.gradle
+++ b/src/configuration-client/application/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation("org.springframework.cloud:spring-cloud-config-client")
 
     testImplementation project(':common:common-test')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 ext {
