--- a/src/security-server/admin-service/application/src/test/resources/application.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application.yml
@@ -9,7 +9,9 @@ spring:
     defer-datasource-initialization: true
   profiles:
     active: test
-
+  cloud:
+    config:
+      enabled: false
 
 logging:
   level:
