--- a/Docker/xrd-dev-stack/compose.yaml
+++ b/Docker/xrd-dev-stack/compose.yaml
@@ -13,6 +13,8 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "https://localhost:4000" ]
+    networks:
+      - xroad-network
   ss0:
     image: ${SS_IMG}
     environment:
@@ -30,6 +32,8 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "https://localhost:4000" ]
+    networks:
+      - xroad-network
   ss1:
     image: ${SS_IMG}
     environment:
@@ -48,6 +52,8 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "https://localhost:4000" ]
+    networks:
+      - xroad-network
   ss2:
     image: ${SS_XRD7_IMG}
     profiles:
@@ -62,6 +68,8 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "https://localhost:4000" ]
+    networks:
+      - xroad-network
   testca:
     image: ${CA_IMG}
     deploy:
@@ -76,6 +84,8 @@ services:
       test: [ "CMD", "curl", "-f", "-k", "http://localhost:8888/testca/certs" ]
     volumes:
       - ca-volume:/home/ca/certs
+    networks:
+      - xroad-network
   issoap:
     image: ${IS_SOAP_IMG}
     deploy:
@@ -88,6 +98,8 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "http://localhost:8080/example-adapter/Endpoint?wsdl" ]
+    networks:
+      - xroad-network
     entrypoint: [ "java", "-Xms64m", "-Xmx256m", "-jar", "/example-adapter.war" ]
   isrest:
     image: wiremock/wiremock:latest
@@ -103,6 +115,8 @@ services:
       test: [ "CMD", "curl", "-f", "-k", "http://localhost:8080/__admin/health" ]
     volumes:
       - ./wiremock_mappings:/home/wiremock/mappings
+    networks:
+      - xroad-network
   hurl:
     build:
         context: .
@@ -130,3 +144,7 @@ services:
         condition: service_healthy
 volumes:
   ca-volume:
+networks:
+  xroad-network:
+    name: xroad-network
+    driver: bridge
