feat: Running SS in a containerized setup Refs: XRDDEV-2722

--- a/src/configuration-client/application/src/main/resources/application.yaml
+++ b/src/configuration-client/application/src/main/resources/application.yaml
@@ -10,3 +10,7 @@ spring:
       enabled: detect #TODO implementing logging changes to support ansi colors
   main:
     banner-mode: log
+
+logging.level:
+  ee.ria.xroad.common.SystemPropertiesLoader: OFF
+
