--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -183,7 +183,7 @@ jobs:
           publish_dir: allure-history
       - name: Post the link to the report
         if: always()
-        uses: Sibz/github-status-action@v1
+        uses: guibranco/github-status-action-v2@latest
         with: 
             authToken: ${{secrets.GITHUB_TOKEN}}
             context: 'Central Server system test report'
