--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -181,15 +181,17 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: allure-gh-pages
           publish_dir: allure-history
-      - name: Post the link to the report
+      - name: Add link to the report as a comment 
+        uses: actions/github-script@v7
         if: always()
-        uses: guibranco/github-status-action-v2@v1.1.13
-        with: 
-            authToken: ${{secrets.GITHUB_TOKEN}}
-            context: 'Central Server system test report'
-            state: 'success'
-            sha: ${{ github.event.pull_request.head.sha }}
-            target_url: nordic-institute.github.io/X-Road/src/central-server/admin-service/ui-system-test/${{ github.run_number }}
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `Central Server Allure report: https://nordic-institute.github.io/X-Road/src/central-server/admin-service/ui-system-test/${github.run_number}`
+            })
   RunSSSystemTests:
     name: Run Security Server system tests
     needs: BuildAndPackageWithUnitTests
